--- a/GetGS/manifest.json
+++ b/GetGS/manifest.json
@@ -1,12 +1,12 @@
 ﻿{
   "Name": "Get Gender Setter",
   "Author": "sqbr",
-  "Version": "1.0.0",
+  "Version": "1.2.9",
   "Description": "Gets Gender Setter variables.",
   "UniqueID": "sqbr.GetGS",
   "EntryDll": "GetGS.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [],
+  "UpdateKeys": ["Nexus:???"],
   "Dependencies": [
     {
       "UniqueID": "Pathoschild.ContentPatcher",
